5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1756_1583.log
== TEST (2019-05-28 22:17:49) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s)):
	if(len(s)%3 = 0 and len(s) >= 3):
		s2 = s[i] + '.'
		i = i + 3
	print(s2)
-- ERROR:
File "XXXX", line 5
    if(len(s)%3 = 0 and len(s) >= 3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:20:06) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s)):
	if(len(s)%3 = 0 and len(s) >= 3):
		s2 = s[i] + '.'
		i = i + 3
	print(s2)
-- EXECUTION TIME:
0.125476
-- ERROR:
  File "/home/codebench/codes/1756/1583/main.py", line 5
    if(len(s)%3 = 0 and len(s) >= 3):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:20:28) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s)):
		s2 = s[i] + '.'
		i = i + 3
	print(s2)
-- ERROR:
File "XXXX", line 7
    print(s2)
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:20:42) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s)):
		s2 = s[i] + '.'
		i = i + 3
print(s2)
-- ERROR:
File "XXXX", line 7
    print(s2)
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:21:58) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s)):
	if(len(s)%3 = 0 and len(s)>=3):
		s2 = s[i] + '.'
		i = i + 3
print(s2)
-- ERROR:
File "XXXX", line 5
    if(len(s)%3 = 0 and len(s)>=3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:22:01) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s)):
	if(len(s)%3 = 0 and len(s)>=3):
		s2 = s[i] + '.'
		i = i + 3
print(s2)
-- EXECUTION TIME:
0.185861
-- ERROR:
  File "/home/codebench/codes/1756/1583/main.py", line 5
    if(len(s)%3 = 0 and len(s)>=3):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:23:05) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s) and len(s) >= 3 and len(s)%3=0):
		s2 = s[i] + '.'
		i = i + 3
print(s2)
-- ERROR:
File "XXXX", line 4
    while(i < len(s) and len(s) >= 3 and len(s)%3=0):
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:24:06) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s)):
		if(len(s >= 3)):
		s2 = s[i] + '.'
		i = i + 3
print(s2)
-- ERROR:
File "XXXX", line 6
    s2 = s[i] + '.'
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:24:43) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s)):
	if(len(s >= 3)):
	s2 = s[i] + '.'
	i = i + 3
print(s2)
-- ERROR:
File "XXXX", line 6
    s2 = s[i] + '.'
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:24:45) 
-- CODE:
s = input("string numerica:")
s2 = ''
i = 3
while(i < len(s)):
	if(len(s >= 3)):
	s2 = s[i] + '.'
	i = i + 3
print(s2)
-- EXECUTION TIME:
0.223453
-- ERROR:
  File "/home/codebench/codes/1756/1583/main.py", line 6
    s2 = s[i] + '.'
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:29:40) 
-- CODE:
s = input("string numerica:")
s2 = '.'
i = 3
while(i < len(s)):
	if(len(s >= 3)):
	s2 = s2 + s[i]
	i = i + 3
print(s2)
-- ERROR:
File "XXXX", line 6
    s2 = s2 + s[i]
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:29:41) 
-- CODE:
s = input("string numerica:")
s2 = '.'
i = 3
while(i < len(s)):
	if(len(s >= 3)):
	s2 = s2 + s[i]
	i = i + 3
print(s2)
-- EXECUTION TIME:
0.202347
-- ERROR:
  File "/home/codebench/codes/1756/1583/main.py", line 6
    s2 = s2 + s[i]
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:40:51) 
-- CODE:
s = input("string numerica:")
s2 = '.'
i = 3
while(i < len(s)):
	if(len(s >= 3)):
	s2 = s2 + s[i]
	i = i + 3
print(s2)
-- EXECUTION TIME:
0.140817
-- ERROR:
  File "/home/codebench/codes/1756/1583/main.py", line 6
    s2 = s2 + s[i]
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:40:52) 
-- CODE:
s = input("string numerica:")
s2 = '.'
i = 3
while(i < len(s)):
	if(len(s >= 3)):
	s2 = s2 + s[i]
	i = i + 3
print(s2)
-- ERROR:
File "XXXX", line 6
    s2 = s2 + s[i]
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:22:56) 
-- CODE:
s = input("caracteres numericos:")
i = 0
while(i < len(s)):
	if(len(s)%3 = 0 and len(s) >= 3):
		s = s[i] + 3
		s = s + "."
		print(s)
-- ERROR:
File "XXXX", line 4
    if(len(s)%3 = 0 and len(s) >= 3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:23:07) 
-- CODE:
s = input("caracteres numericos:")
i = 0
while(i < len(s)):
	if(len(s)%3 = 0 and len(s) >= 3):
		s = s[i] + 3
		s = s + "."
	print(s)
-- EXECUTION TIME:
0.121385
-- ERROR:
  File "/home/codebench/codes/1756/1583/main.py", line 4
    if(len(s)%3 = 0 and len(s) >= 3):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:08) 
-- CODE:
s = input("caracteres numericos:")
i = 0
while(i < len(s)):
	if(len(s)%3 = 0 and len(s) >= 3):
		s = s[i] + 3
		s = s + "."
	print(s)
-- ERROR:
File "XXXX", line 4
    if(len(s)%3 = 0 and len(s) >= 3):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:28:54) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + srt(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.194395
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:29:37) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:38) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.249169
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:29:39) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:41) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.232119
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
123
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:42) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.196673
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:42) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.241369
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:42) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.228673
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:42) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.354915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 6, in <module>
    saida = saida + "." + str(n[i : i + 3])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:42) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.446905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 6, in <module>
    saida = saida + "." + str(n[i : i + 3])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:42) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.816241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 6, in <module>
    saida = saida + "." + str(n[i : i + 3])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:29:42) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:43) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.356584
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
caracteres numericos:
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
caracteres numericos:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:44) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.547785
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1756/1583/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:44) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.525567
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1756/1583/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:44) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.608381
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1756/1583/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:44) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])
print(saida)	
-- EXECUTION TIME:
0.527803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 6, in <module>
    saida = saida + "." + str(n[i : i + 3])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:29:58) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

	print(saida)	
-- EXECUTION TIME:
0.207458
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:30:39) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:30:40) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.195501
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:22) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.181122
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:23) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.264808
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:24) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.217855
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:24) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.457177
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 6, in <module>
    saida = saida + "." + str(n[i : i + 3])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:24) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.315135
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:24) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.604889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 6, in <module>
    saida = saida + "." + str(n[i : i + 3])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:24) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.739142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 6, in <module>
    saida = saida + "." + str(n[i : i + 3])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:31:24) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:25) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.376001
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1756/1583/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:25) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.40492
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1756/1583/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:25) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.492557
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1756/1583/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:25) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.490641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 6, in <module>
    saida = saida + "." + str(n[i : i + 3])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:25) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(n[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.598887
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 6, in <module>
    saida = saida + "." + str(n[i : i + 3])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:31:48) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(s[i : i + 3])

print(saida)	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:31:55) 
-- CODE:
s = input("caracteres numericos:")
i = 0
saida = s[0:3]
while(i < len(s) - 3):
	i = i + 3
	saida = saida + "." + str(s[i : i + 3])

print(saida)	
-- EXECUTION TIME:
0.152756
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
